--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todolist",
-  "homepage": "https://DNDAHieuBeo.github.io/DNDAHieubeo1.github.io",
+  "homepage": "https://DNDAHieuBeo.github.io/DNDAHieubeo1.github.io/#",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "babel-preset-es2015": "^6.24.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
@@ -21,8 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
