--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todolist",
-  "homepage": "https://DNDAHieuBeo.github.io/DNDAHieubeo1.github.io/#",
+  "homepage": "https://DNDAHieuBeo.github.io/#",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
